assets/css/main.css
/* ... */
					#main > .panel.intro header h1 {
						line-height: 1.25em;
						margin-bottom: 0;
					}

					#main > .panel.intro header h7 {
						letter-spacing: -0.015em;
						font-size: 1.25em;
						margin: 0.25em 0 0 0;
					}

					#main > .panel.intro header p {
						font-size: 0.8em;
						margin: 0.25em 0 0 0;
						color: #000000;
					}

				@media screen and (max-width: 980px) {

					#main > .panel.intro {
						-moz-flex-direction: column;
						-webkit-flex-direction: column;
						-ms-flex-direction: column;
						flex-direction: column;
						height: auto;
					}

						#main > .panel.intro .pic {
							height: 25em;
							width: 100%;
						}

						#main > .panel.intro header {
							padding: 4em;
							text-align: center;
						}

				}

				@media screen and (max-width: 736px) {

					#main > .panel.intro .pic {
						height: 20em;
					}

					#main > .panel.intro header {
						padding: 2.75em 2em 2.5em 2em;
					}

						#main > .panel.intro header p {
							font-size: 1em;
							margin: 0.25em 0 0 0;
						}

				}

/* Footer */

	#footer {
		color: rgba(255, 255, 255, 0.45);
		text-align: center;
		padding: 2em 0 0 0;
		font-size: 0.75em;
	}

		#footer a {
			color: #ddd;
			color: rgba(255, 255, 255, 0.65);
			-moz-transition: color .25s ease-in-out;
			-webkit-transition: color .25s ease-in-out;
			-ms-transition: color .25s ease-in-out;
			transition: color .25s ease-in-out;
		}

			#footer a:hover {
				color: white;
			}

		#footer .copyright {
			list-style: none;
			padding-left: 0;
		}

			#footer .copyright li {
				display: inline-block;
				padding-left: 1em;
				margin-left: 1em;
				border-left: solid 1px rgba(255, 255, 255, 0.25);
				line-height: 1;
			}

				#footer .copyright li:first-child {
					padding-left: 0;
					margin-left: 0;
					border-left: 0;
				}

		@media screen and (max-width: 736px) {

			#footer .copyright li {
				padding-left: 0.5em;
				margin-left: 0.5em;
			}

		}

/* Maximaze img */
.modal {
    display: none; 
    position: fixed; 
    z-index: 1000; 
    padding-top: 100px; 
    left: 0;
    top: 0;
    width: 100%; 
    height: 100%; 
    overflow: auto; 
    background-color: rgba(0, 0, 0, 0.9); 
}

.modal-content {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
}

.modal-content, .close {
    animation-name: zoom;
    animation-duration: 0.6s;
}

@keyframes zoom {
    from {transform: scale(0)} 
    to {transform: scale(1)}
}

.close {
    position: absolute;
    top: 50px;
    right: 35px;
    color: #fff;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

#caption {
    margin: auto;
    display: block;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
}

.work-item {
    text-align: center;
    padding: 15px;
}

.work-image {
    max-width: 200px;
    max-height: 200px;
    width: auto;
    height: auto;
}

.work-href {
    display: inline-block;
    font-size: 16px;
    color: #333;
    text-decoration: none;
    margin-top: 10px;
}

.work-href:hover {
    color:#000;
	font-weight: bold;
}

@media screen and (max-width: 980px) {
    .col-6-medium {
        width: 50%;
    }
}

@media screen and (max-width: 736px) {
    .col-12-small {
        width: 100%;
    }
}

